# ChangeLog for xfce-extra/xfce4-power-manager
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  06 Nov 2008; Christoph Mende <angelos@gentoo.org>
  +xfce4-power-manager-9999.ebuild:
  Initial import
