@@ -1,3 +1,5 @@
+DIST xfce4-power-manager-0.6.0RC1.tar.bz2 370981 RMD160 48c86aef5c9d70851599ba4376d9f23b31acba34 SHA1 2f0eb5ca84dbc38c772daee5fe3c6185189444a8 SHA256 9f7f98e83de13a388de54ac8d1d309a49228a71fb3ba22fbbe368a156da26985
+EBUILD xfce4-power-manager-0.6.0_rc1.ebuild 617 RMD160 07b4d66e8377c9afb50e913489bb98fe7c4e9ae5 SHA1 500dd0726dfe7be0d2a921c37fc95a15a3c4a51e SHA256 8f133ca1f5cc450a52d320f254ca79f5164c0079892744dfd58758d66049ed7f
 EBUILD xfce4-power-manager-9999.ebuild 567 RMD160 eef8dd3b25200eb0802228e95f43d36c126a1ca8 SHA1 a749deea40075c6b6fd611ee00bec1b8c98df7df SHA256 74fa329937ae9bfa5d5428d83466f55034f9630ee48a7bac12203021867ffdb1
 MISC ChangeLog 237 RMD160 893a65b2927a907194dd2f38183a5dac90839b18 SHA1 94c0545da7e3fb50ad27d8822b3f3d2a4524548d SHA256 deffceacb72fc601a90cb6d2391b8dec3f0a4887c0d053e122ea176094f78eac
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
